<resources>
    <string name="app_name">AxeDevTools Sample App</string>
    <string name="cb">CB</string>
    <string name="app_title">CHIC BOUTIQUE</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_more_options">More options</string>
    <string name="ipsum_sentence">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <string name="next">Next</string>
    <string name="catalog">Catalog</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="chic_boutique">Chic Boutique</string>
    <string name="search">Search</string>
    <string name="hero_description">Fashionable lady on a rowboat in winter.</string>
    <string name="check">Check</string>
    <string name="limited_number_of_products">Limited number of products</string>
    <string name="winter_2022_best_collection">Winter 2022 best collection</string>
    <string name="right_arrow">Right arrow</string>
    <string name="most_popular">Most popular</string>
    <string name="_56_items">56 Items</string>
    <string name="collection">Collection</string>
    <string name="recommended">Recommended</string>
    <string name="_13_items">13 Items</string>
    <string name="sale_item">Sale item</string>
    <string name="favorite">Favorite</string>
    <string name="explorinc_life">Explorinc Life</string>
    <string name="price">$ %s</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="collection_image">Collection image</string>
    <string name="winter">Winter 2022</string>
    <string name="spring">Spring 2022</string>
    <string name="summer">Summer 2022</string>
    <string name="catalog_collection_image">Catalog collection image</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="sweatshirts">Sweatshirts</string>
    <string name="tank_tops">Tank Tops</string>
    <string name="bottoms">Bottoms</string>
    <string name="accessories">Accessories</string>
    <string name="category_catalog_desc">%s for every taste</string>
    <string name="all">All</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="new_collection">NEW COLLECTION</string>
    <string name="delete_all">Delete all</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="cart_item_image">Cart item image</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="gray">Gray</string>
    <string name="cart_total_items">Total ( %s items ):</string>
    <string name="cart_total_price">$ %s.00</string>
    <string name="profile_image">Profile image</string>
    <string name="edit_profile">Edit profile</string>
    <string name="customer">Customer</string>
    <string name="james_anderson">James Anderson</string>
    <string name="_45_sale">45% SALE</string>
    <string name="promo_code">XT4FH33D</string>
    <string name="promo_for_you">Promo for you</string>
    <string name="my_details_icon">My details icon</string>
    <string name="dancing_woman_on_purple_background">Dancing woman on purple background</string>
    <string name="my_details">My details</string>
    <string name="log_out">Log out</string>
    <string name="need_help">Need help?</string>
    <string name="address_book">Address book</string>
    <string name="payment_methods">Payment methods</string>
    <string name="my_orders">My orders</string>
    <string name="title_activity_sample_compose">SampleComposeActivity</string>
</resources>